# Diab_M_1

./: .gitignore  CITATION.cff  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
docs/: roadmap_app_and_device.md
docs/clinical/: diagnostic_criteria.md  references.bib
docs/regulatory/: 01_intended_use_and_classification.md  02_iso_14971_risk_management.md  03_iec_62304_software_lifecycle.md  04_iso_15197_analytical_performance.md  05_requirements_traceability.md  README.md
examples/: 01_simulate_scenarios.py  02_closed_loop_pid.py
src/diab_m1/: __init__.py  meals.py  units.py
src/diab_m1/control/: __init__.py  pid.py  safety.py
src/diab_m1/diagnostics/: __init__.py  classifier.py
src/diab_m1/models/: __init__.py  bergman.py  stolwijk_hardy.py
src/diab_m1/signal/: __init__.py  cgm.py
tests/: test_cgm.py  test_control_safety.py  test_diagnostics.py  test_models.py  test_units.py
